# geodetect

./: .gitignore  .gitmodules  CMakeLists.txt  GeoDetection.cpp  GeoDetection.h  PCLreadASCII.cpp  PCLreadASCII.h  PclPairProcessing.h  README.md  autoReg.cpp  autoReg.h  autoRegistration.cpp  autoRegistration.h  benchmarks.xlsx  fast_float.h  importAscii.cpp  importAscii.h  main.cpp  pclProcessing.cpp  pclProcessing.h  temp_coreDeclarations.txt
examples/: autoregistration_example.cpp  mask_classification_example.cpp  vegetation_segmentation_example.cpp
src/: GeoDetection.cpp  GeoDetection.h  PCLreadASCII.cpp  PCLreadASCII.h  ScalarField.cpp  ScalarField.h  autoRegistration.cpp  autoRegistration.h  core.cpp  core.h  core.hpp  core_impl.h  features.cpp  features.h  geodetect.cpp  geodetect.h  log.cpp  log.h  main.cpp  maskclassify.cpp  maskclassify.h  progressbar.h  readascii.cpp  readascii.h  readascii_core.cpp  readascii_core.h  registration_cloud.h  segment.cpp  segment.h  segmentVegetation.cpp  segmentVegetation.h
